added processing script

--- a/process_image.ipynb
+++ b/process_image.ipynb
@@ -22,7 +22,7 @@
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Folder containing the raw images\n",
+    "# Folder containing data\n",
     "image_folder = \"raw_images\"\n",
     "\n",
     "# Lists to store average brightness and image numbers\n",
